Fixed formGroup error

--- a/src/app/client-create/client-create.component.html
+++ b/src/app/client-create/client-create.component.html
@@ -40,6 +40,11 @@
             </div>
           </div>
         </div>
+
+        <div>
+          <label for="notes">Notes</label>
+          <textarea type="text" formControlName="notes" class="form-control" ></textarea>
+        </div>
       </div>
 
       <div class="section actions">
