--- a/src/app/client/client-detail.component.html
+++ b/src/app/client/client-detail.component.html
@@ -1,4 +1,4 @@
-<form class="form-group" formGroup="clientDetailFormGroup" (ngSubmit)="submit()">
+<form class="form-group" [formGroup]="clientDetailFormGroup" (ngSubmit)="submit()">
     <div class="row client-row">
         <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
 
@@ -62,6 +62,18 @@
                     <ng-template #readModePhone>
                         <div class="clientDetail">
                             <a *ngIf="!isEditable" href="tel:{{client.fields.phone}}">{{client.fields.phone}}</a>
+                        </div>
+                    </ng-template>
+                </div>
+
+                <div *ngIf="client?.fields" class="data">
+                    <div *ngIf="isEditable; else readModeNotes">
+                        <label for="name">Notes</label>
+                        <textarea type="text" formControlName="notes" class="form-control data" value="{{client.fields.notes}}">{{client.fields.notes}}</textarea>
+                    </div>
+                    <ng-template #readModeNotes>
+                        <div class="clientDetail">
+                            <div *ngIf="!isEditable" >{{client.fields.notes}}</div>
                         </div>
                     </ng-template>
                 </div>
