--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -18,6 +18,10 @@
                     </svg>
                 </a>
             </span>
+            <a *ngIf="skip > 0" (click)="prevPage();" onClick="window.scrollTo(0,0);" class="searchResults px-3">&lt;
+                Previous</a>
+            <a *ngIf="(skip + limit) <= total" (click)="nextPage();" onClick="window.scrollTo(0,0);" class="searchResults px-3">Next
+                &gt;</a>
         </div>
     </div>
 </div>
@@ -64,8 +68,11 @@
 
 <div class="row">
     <div class="col">
-        <h5 class="searchResults" *ngIf="total > 0">{{nowShowing}}</h5>
-        <button *ngIf="skip > 0" (click)="prevPage();" onClick="window.scrollTo(0,0);" class="btn btn-light">Previous</button>
-        <button *ngIf="(skip + limit) <= total" (click)="nextPage();" onClick="window.scrollTo(0,0);" class="btn btn-light">Next</button>
+        <div class="text-center">
+            <span class="px-3" *ngIf="total > 0">{{nowShowing}}</span>
+            <a *ngIf="skip > 0" (click)="prevPage();" onClick="window.scrollTo(0,0);" class="px-3">&lt; Previous</a>
+            <a *ngIf="(skip + limit) <= total" (click)="nextPage();" onClick="window.scrollTo(0,0);" class="px-3">Next
+                &gt;</a>
+        </div>
     </div>
 </div>
