--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,10 +1,16 @@
-<div >
-    <input id="file" type="file" (change)="onFileSelected($event);"  #fileInput>
-    <button type="button" (click)="fileInput.click()">Select Image</button>
-    <ul *ngIf="selectedFiles != null">
-        <li *ngFor="let file of selectedFiles">
+<form [formGroup]="form" (ngSubmit)="submit()">
+    <div>
+        <input formControlName="name" type="text" class="form-control" value="some default value">
+    </div>
+    <div>
+        <input id="file" formControlName="file" type="file" (change)="onFileSelected($event);" class="form-control"
+            #fileInput>
+        <button type="button" (click)="fileInput.click()">Select Image</button>
+        <ul *ngIf="selectedFiles != null">
+            <li *ngFor="let file of selectedFiles">
                 {{file.name}}
-        </li>
-    </ul>
-</div>
-<button (click)="submit()" class="btn btn-primary">Save</button>
+            </li>
+        </ul>
+    </div>
+    <button type="submit" class="btn btn-primary">Save</button>
+</form>
