--- a/src/app/test/test-upload/test-upload.component.html
+++ b/src/app/test/test-upload/test-upload.component.html
@@ -1,10 +1,6 @@
 <div >
   <input class="hidden" id="file" type="file" accept="image/*" (change)="handleInputChange($event)" multiple #fileInput>
   <button type="button" (click)="fileInput.click()">Select Image</button>
-  <ul *ngIf="selectedFiles != null">
-      <li *ngFor="let file of selectedFiles">
-              {{file.name}}
-      </li>
-  </ul>
+  
 </div>
-<button (click)="submit()" class="btn btn-primary">Save</button>
+<button (click)="handleInputChange($event)" class="btn btn-primary">Save</button>
