--- a/src/app/client/client-detail.component.html
+++ b/src/app/client/client-detail.component.html
@@ -82,7 +82,7 @@
 
         <div class="col-md-6 col-sm-12">
             <div class="section actions">
-                <span style="float: right">
+                <span >
                     <a *ngIf="client && !isEditable" href="/project-create/{{client.sys.id}}" class="btn btn-light">Add Project
                     </a>
                     <button *ngIf="client && !isEditable" (click)="enableEditing();" class="btn btn-light">Edit</button>
@@ -117,10 +117,10 @@
                                     2) In Progress - show first regular image
                                     3) No images - show placeholder
                                     -->
-                    <img *ngIf="project.fields.finalImage; else inProgressBlock" class="card-img-top img-responsive" src="{{project.fields.finalImage.fields.file.url}}"
+                    <img *ngIf="project.fields.finalImage; else inProgressBlock" class="card-img-top img-responsive" src="{{project.fields.finalImage.fields.file.url}}?fm=webp"
                         alt="{{project.fields.title}}">
                     <ng-template #inProgressBlock>
-                        <img *ngIf="project.fields.assets; else noImage" class="card-img-top img-responsive" src="{{project.fields.assets[0].fields.file.url}}"
+                        <img *ngIf="project.fields.assets; else noImage" class="card-img-top img-responsive" src="{{project.fields.assets[0].fields.file.url}}?fm=webp"
                             alt="{{project.fields.title}}">
                     </ng-template>
                     <ng-template #noImage>
