--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -7,11 +7,7 @@
     <div class="col">
         <div class="section">
             <span style="float: right">
-                <button class="btn btn-light" routerLink="/client-create">
-                    <svg class="icon" width="0.75em" height="0.75em">
-                        <use xlink:href="/assets/symbol-defs.svg#icon-plus"></use>
-                    </svg>
-                </button>
+                <span class="btn-light py-2 px-2" routerLink="/client-create">Add</span>
             </span>
         </div>
     </div>
