--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,3 @@
-.btn-light {
-    /* tweaking the default Bootstrap style */
-    background-color: #87bbf0;
-}
-
 .card-body a, .card-body h5 {
     color: inherit;
     cursor: pointer;
@@ -10,8 +5,8 @@
 }
 
 .card-title {
-    font-size: 1.25rem;
-    margin-bottom: .5rem;
+    font-size: larger;
+    margin-bottom: 5%;
     line-height: 1.2;
     font-weight: 500;
     text-decoration: none;
@@ -25,6 +20,8 @@
     cursor: pointer;
     color: inherit;
 }
+
+
 
 @media (min-width: 576px) {
     .card-columns {
