--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* global styles */
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     background-color: #efefef;
 }
 .main-content {
@@ -35,10 +35,8 @@ a {
     padding-bottom: 0.5em;
 }
 .sectionTitle {
-    font-size: 1.75rem;
-    margin-bottom: 1rem;
+    font-size: larger;
     font-weight: 500;
-    line-height: 1.2;
 }
 
 .actions {
@@ -48,6 +46,7 @@ a {
 .btn {
     margin-right: 10px;
 }
+
 
 
 
