--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* global styles */
 body {
-    font-family: 'Lato', sans-serif;
+    /*font-family: 'Lato', sans-serif;*/
     background-color: #efefef;
 }
 .main-content {
