Removed environment source from repo stream

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div>
                 <a class="logo" routerLink="/">
-                    <img alt="Home" height="32" width="32" src="../../assets/logo/dreamcatcher.svg">
+                    <img alt="Dreamcatcher Home" height="32" width="32" src="../../assets/logo/dreamcatcher.svg">
                 </a>
             </div>
             <div>
