Cleaning tree before adding Firebase

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,8 +9,13 @@
             <div>
                 <!-- these float right (thanks to nav-item class) so list them in Right-To-Left order-->
                 <span class="nav-item" >
-                    <div style="font-size: x-small;">{{userDisplayName}}</div>
-                    <div (click)="logout()" style="font-size: x-small;">Logout</div>
+                    <div *ngIf="afAuth.user | async as user; else showLogin">
+                        <div style="font-size: x-small;">{{ user.displayName }}</div>
+                        <div (click)="logout()" style="font-size: x-small;">Logout</div>
+                      </div>
+                      <ng-template #showLogin>
+                        <div (click)="login()" style="font-size: x-small;">Login</div>
+                      </ng-template>
                 </span>
                 <a class="nav-item" routerLink="/projects">{{projectsTitle}}</a>
                 <a class="nav-item" routerLink="/clients">{{clientsTitle}}</a>
