Auth working. Still need to fix navigation of unauth'd users

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,3 @@
-<p>
-  login works! 
-  <span *ngIf="user">{{user.displayName}}</span>
-</p>
 <form [formGroup]="loginForm">
   <div class="form-group">
     <label>Email address</label>
@@ -13,4 +9,5 @@
     <label class="error">{{errorMessage}}</label>
   </div>
   <button type="submit" (click)="tryLogin(loginForm.value)" class="btn btn-default">Login</button>
+  <button (click)="tryLogout()" class="btn btn-default">Logout</button>
 </form>
