--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -14,7 +14,8 @@
                 <div *ngIf="artist?.fields" class="data">
                     <div *ngIf="isEditable; else readModeEmail">
                         <label for="name">Email</label>
-                        <input type="text" formControlName="email" class="form-control" value="{{artist.fields.email}}" required>
+                        <input type="text" formControlName="email" class="form-control" value="{{artist.fields.email}}"
+                            required>
 
                         <div *ngIf="artistDetailFormGroup.controls['email'].invalid && (artistDetailFormGroup.controls['email'].dirty || artistDetailFormGroup.controls['email'].touched)"
                             class="alert alert-danger ng-invalid">
@@ -31,12 +32,14 @@
                 <div *ngIf="artist?.fields" class="data">
                     <div *ngIf="isEditable; else readModeFirstName">
                         <label for="name">First Name</label>
-                        <input type="text" formControlName="firstName" class="form-control data" value="{{artist?.fields.firstName}}">
+                        <input type="text" formControlName="firstName" class="form-control data"
+                            value="{{artist?.fields.firstName}}">
 
                     </div>
                     <ng-template #readModeFirstName>
                         <div class="artistDetail">
-                            <a *ngIf="!isEditable" class="link" href="mailto:{{artist.fields.firstName}}">{{artist.fields.firstName}}</a>
+                            <a *ngIf="!isEditable" class="link"
+                                href="mailto:{{artist.fields.firstName}}">{{artist.fields.firstName}}</a>
                         </div>
                     </ng-template>
                 </div>
@@ -44,12 +47,14 @@
                 <div *ngIf="artist?.fields" class="data">
                     <div *ngIf="isEditable; else readModeLastName">
                         <label for="name">Last Name</label>
-                        <input type="text" formControlName="lastName" class="form-control data" value="{{artist?.fields.lastName}}">
+                        <input type="text" formControlName="lastName" class="form-control data"
+                            value="{{artist?.fields.lastName}}">
 
                     </div>
                     <ng-template #readModeLastName>
                         <div class="artistDetail">
-                            <a *ngIf="!isEditable" class="link" href="mailto:{{artist.fields.lastName}}">{{artist.fields.lastName}}</a>
+                            <a *ngIf="!isEditable" class="link"
+                                href="mailto:{{artist.fields.lastName}}">{{artist.fields.lastName}}</a>
                         </div>
                     </ng-template>
                 </div>
@@ -57,23 +62,25 @@
                 <div class="artistDetail">
                     <div>{{artist.fields.firebaseId}}</div>
                 </div>
-                </div>
             </div>
         </div>
+    </div>
 
-        <div class="col-md-6 col-sm-12">
-            <div class="section actions">
-                <span >
-                    <a *ngIf="artist && !isEditable" href="/client-create/{{artist.sys.id}}" class="btn btn-light">Add Client
-                    </a>
-                    <button *ngIf="artist && !isEditable" (click)="enableEditing();" class="btn btn-light">Edit</button>
-                    <button *ngIf="artist && !isEditable" (click)="deleteArtist(artist.sys.id);" class="btn btn-light">Delete</button>
+    <div class="col-md-6 col-sm-12">
+        <div class="section actions">
+            <span>
+                <a *ngIf="artist && !isEditable" href="/client-create/{{artist.sys.id}}" class="btn btn-light">Add
+                    Client
+                </a>
+                <button *ngIf="artist && !isEditable" (click)="enableEditing();" class="btn btn-light">Edit</button>
+                <button *ngIf="artist && !isEditable" (click)="deleteArtist(artist.sys.id);"
+                    class="btn btn-light">Delete</button>
 
-                    <button *ngIf="artist && isEditable" (click)="submit();" type="submit" [disabled]="!artistDetailFormGroup.valid || (!artistDetailFormGroup.dirty || !artistDetailFormGroup.touched)"
-                        class="btn btn-primary">Save</button>
-                    <button *ngIf="artist && isEditable" (click)="disableEditing();" class="btn btn-light">Cancel</button>
-                </span>
-            </div>
+                <button *ngIf="artist && isEditable" (click)="submit();" type="submit"
+                    [disabled]="!artistDetailFormGroup.valid || (!artistDetailFormGroup.dirty || !artistDetailFormGroup.touched)"
+                    class="btn btn-primary">Save</button>
+                <button *ngIf="artist && isEditable" (click)="disableEditing();" class="btn btn-light">Cancel</button>
+            </span>
         </div>
     </div>
 </form>
