--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
                 </a>
             </div>
             <div>
-                <div *ngIf="!(authService.isAuthenticated()); else showLoggedIn">
+                <div *ngIf="!(isAuth()); else showLoggedIn">
                     <a class="nav-item" routerLink="/login">Login</a>
                 </div>
                 <ng-template #showLoggedIn>
