--- a/src/app/artist-create/artist-create.component.html
+++ b/src/app/artist-create/artist-create.component.html
@@ -1,4 +1,4 @@
-<form class="form-group" [formGroup]="artistFormGroup" (ngSubmit)="submit()">
+<form class="form-group" formGroup="artistFormGroup" (ngSubmit)="submit()">
   <div class="row artist-row">
     <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
 
