--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -40,7 +40,7 @@
         <div *ngFor="let client of clients?.items">
             <div class="card">
                 <div class="card-body">
-                    <span class="card-title" [routerLink]="['/client/' + client.sys.id]">{{ client.fields.name }}</span>
+                    <span class="card-title" routerLink="['/client/' + client.sys.id]">{{ client.fields.name }}</span>
                     <a *ngIf="client.fields.email" class="card-text ml-2" href="mailto:{{client.fields.email}}">{{
                         client.fields.email
                         }}
