--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form formGroup="loginForm">
+<form [formGroup]="loginForm">
   <div class="form-group">
     <label>Email address</label>
     <input type="email" formControlName="email" class="form-control">
