--- a/src/app/client/client-detail.component.html
+++ b/src/app/client/client-detail.component.html
@@ -1,4 +1,4 @@
-<form class="form-group" formGroup="clientDetailFormGroup" (ngSubmit)="submit()">
+<form class="form-group" [formGroup]="clientDetailFormGroup" (ngSubmit)="submit()">
     <div class="row client-row">
         <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
 
@@ -110,7 +110,7 @@
     <div class="col card-columns">
         <div *ngIf="projectCount > 0; else noProjects">
             <div class="card" *ngFor="let project of projects?.items">
-                <span routerLink="['/project/' + project.sys.id]">
+                <span [routerLink]="['/project/' + project.sys.id]">
                     <!-- three options for image to display:
                                     Based on status and image availability 
                                     1) Final - show final image
