--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
         <div *ngFor="let client of clients?.items" class="clients_box">
             <div class="card client-card">
                 <div class="card-body">
-                    <span class="card-title" routerLink="['/client/' + client.sys.id]">{{ client.fields.name }}</span>
+                    <span class="card-title" [routerLink]="['/client/' + client.sys.id]">{{ client.fields.name }}</span>
                     <a *ngIf="client.fields.email" class="card-text ml-2" href="mailto:{{client.fields.email}}">{{
                         client.fields.email
                         }}
@@ -54,7 +54,7 @@
 <div class="row">
     <div class="col card-columns">
         <div *ngFor="let project of projects?.items">
-            <span class="card project-card" *ngIf="project.fields.finalImage; else inProgressBlock" routerLink="['/project/' + project.sys.id]">
+            <span class="card project-card" *ngIf="project.fields.finalImage; else inProgressBlock" [routerLink]="['/project/' + project.sys.id]">
                 <picture class="card-img-top img-responsive">
                     <source media="(min-width: 992px)" srcset="https://{{project.fields.finalImage.fields.file.url}}?fm=jpg&w=500&h=500">
                     <source media="(min-width: 450px)" srcset="https://{{project.fields.finalImage.fields.file.url}}?fm=jpg&w=300&h=300">
@@ -69,7 +69,7 @@
             </span>
 
             <ng-template #inProgressBlock>
-                <span class="card project-card" *ngIf="project.fields.assets; else noImage" routerLink="['/project/' + project.sys.id]">
+                <span class="card project-card" *ngIf="project.fields.assets; else noImage" [routerLink]="['/project/' + project.sys.id]">
                     <picture class="card-img-top img-responsive">
                         <source media="(min-width: 992px)" srcset="https://{{project.fields.assets[0].fields.file.url}}?fm=jpg&w=500&h=500">
                         <source media="(min-width: 450px)" srcset="https://{{project.fields.assets[0].fields.file.url}}?fm=jpg&w=300&h=300">
@@ -85,7 +85,7 @@
             </ng-template>
 
             <ng-template #noImage>
-                <span class="card project-card" routerLink="['/project/' + project.sys.id]">
+                <span class="card project-card" [routerLink]="['/project/' + project.sys.id]">
                     <img class="card-img-top img-responsive" src="https://via.placeholder.com//200x100?text=No+image+yet"
                         alt="{{project.fields.title}}">
                     <div class="card-body">
