--- a/src/app/project/project-detail.component.html
+++ b/src/app/project/project-detail.component.html
@@ -61,14 +61,14 @@
                     </div>
                     <ng-template #readModeStyle>
                         <div class="projectDetail">
-                            <span *ngFor="let style of project.fields.style" routerLink="['/projects', style]" class="link">{{project.fields.style}}</span>
+                            <span *ngFor="let style of project.fields.style" [routerLink]="['/projects', style]" class="link">{{project.fields.style}}</span>
                         </div>
                     </ng-template>
                 </div>
 
                 <!-- client name is not editable here - read only -->
                 <div class="projectDetail" *ngIf="!isEditable">
-                    <span class="link" routerLink="['/client/' + project.fields.clientRef.sys.id ]">
+                    <span class="link" [routerLink]="['/client/' + project.fields.clientRef.sys.id ]">
                         {{project.fields.clientRef.fields.name}}
                     </span>
                 </div>
@@ -186,7 +186,7 @@
     <div class="row">
         <div class="col">
             <div class="section actions">
-                <button *ngIf="project && !isEditable" routerLink="['/assetNew', project.sys.id]" class="btn btn-light">Add
+                <button *ngIf="project && !isEditable" [routerLink]="['/assetNew', project.sys.id]" class="btn btn-light">Add
                     Image
                 </button>
                 <button *ngIf="project && !isEditable" (click)="enableEditing();" class="btn btn-light">Edit</button>
