--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,7 +12,7 @@
             <span class="searchResults">
                 <input type="search" class="input" (keydown)="onSearchKeydown($event)" placeholder="search here">
                 {{nowShowing}}
-                <a *ngIf="query != ''" href="/projects">
+                <a *ngIf="query != ''" routerLink="/projects">
                     <svg class="icon ml-1" width="1em" height="1em">
                         <use xlink:href="/assets/symbol-defs.svg#icon-cancel-circle"></use>
                     </svg>
@@ -35,7 +35,7 @@
 <div class="row">
     <div class="col card-columns" id="projects-container">
         <div class="card" *ngFor="let project of projects?.items">
-            <span routerLink="['/project/' + project.sys.id ]" class="project-card-link">
+            <span [routerLink]="['/project/' + project.sys.id ]" class="project-card-link">
                 <!-- three options for image to display:
                         Based on status and image availability 
                         1) Final - show final image
