Removed ngsw, minor UI fixes

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,5 +8,5 @@
     <input type="password" class="form-control" formControlName="password">
     <label class="error">{{errorMessage}}</label>
   </div>
-  <button type="submit" (click)="tryLogin(loginForm.value)" class="btn btn-default">Login</button>
+  <button type="submit" (click)="tryLogin(loginForm.value)" class="btn-light  btn-default">Login</button>
 </form>
